[gd_scene load_steps=3 format=3 uid="uid://byrxkkqe8qqwy"]

[ext_resource type="Script" path="res://src/gui/main_menu.gd" id="1_mndrc"]
[ext_resource type="FontFile" uid="uid://c3m6o2mwnyc83" path="res://assets/fonts/WenCangShuFang-2.ttf" id="1_p4i0b"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mndrc")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -79.0
offset_top = -110.0
offset_right = 59.0
offset_bottom = -9.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_p4i0b")
theme_override_font_sizes/font_size = 64
text = "光追"

[node name="LabelEng" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -23.0
offset_top = -49.0
offset_right = 230.0
offset_bottom = 52.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_p4i0b")
theme_override_font_sizes/font_size = 24
text = "Light Chasing"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = -152.0
offset_right = 152.0
offset_bottom = -16.0
grow_vertical = 0
alignment = 2

[node name="StartGameButton" type="Button" parent="VBoxContainer"]
modulate = Color(1, 1, 1, 0.501961)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_p4i0b")
text = "开始游戏"
flat = true
alignment = 0

[node name="HowToPlayButton" type="Button" parent="VBoxContainer"]
modulate = Color(1, 1, 1, 0.501961)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_p4i0b")
text = "这游戏怎么操作啊？"
flat = true
alignment = 0

[node name="CreditsButton" type="Button" parent="VBoxContainer"]
modulate = Color(1, 1, 1, 0.501961)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_p4i0b")
text = "这破游戏谁做的？"
flat = true
alignment = 0

[node name="QuitButton" type="Button" parent="VBoxContainer"]
modulate = Color(1, 1, 1, 0.501961)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_p4i0b")
text = "退出游戏"
flat = true
alignment = 0

[connection signal="pressed" from="VBoxContainer/StartGameButton" to="." method="_on_start_game_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HowToPlayButton" to="." method="_on_how_to_play_button_pressed"]
[connection signal="pressed" from="VBoxContainer/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
